# zstring

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  bar.sh  run_test.sh
scripts/: clean.sh  cmake_clang_build.sh  cmake_clang_build_with_llvm_toolchain.sh  cmake_gcc_build.sh  print_versions_of_tools.sh
src/: main.cpp  string.hpp  zstring.hpp
tests/: 1.init-zero.cpp  2.init-cstr-empty.cpp  3.init-cstr-foobar.cpp  4.init-nch-22-A.cpp  5.init-nch-23-L.cpp  6.init-nch-24-P.cpp  7.init-cstr-9-biang.cpp  8.eq-cstr-sso-to-heap.cpp  9.eq-cstr-heap-to-sso.cpp  CMakeLists.txt  pstrdata.hpp
tests/ans/: 2.init-cstr-empty.txt  3.init-cstr-foobar.txt  4.init-nch-22-A.txt  5.init-nch-23-L.txt  6.init-nch-24-P.txt  7.init-cstr-9-biang.txt  8.eq-cstr-sso-to-heap.txt  9.eq-cstr-heap-to-sso.txt
